# v2v

./: README.md
install/: local_setup.sh  setup.sh
log/: latest_build
src/block/: CMakeLists.txt  package.xml
src/block/include/block/: block_ros.hpp  publisher_node.hpp  self_posture_subscriber_node.hpp  standard_data.hpp
src/block/src/: block_ros.cpp  publisher_node.cpp  self_posture_subscriber_node.cpp
src/my_interfaces/: CMakeLists.txt  package.xml
src/my_interfaces/msg/: Posture.msg  PostureArray.msg
src/posture_simulator/: CMakeLists.txt  package.xml
src/posture_simulator/include/posture_simulator/: self_posture_publisher.hpp
src/posture_simulator/src/: self_posture_publisher.cpp
